Update cmake cache handling
Added cache clearing to prevent past runs
interfering with new,
Introduced component specific build variable

Change-Id: Ib91dd062f115f6a7915d89ec388cf1bd0566b44f
Signed-off-by: Erik Andersson <erik.andersson@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ endif()
 #############################################################################
 
 option(MODEL_CONVERTER_ENABLE_CCACHE "Enable CCACHE support" OFF)
+option(MODEL_CONVERTER_BUILD_DOCS "Build documentation" OFF)
 option(MODEL_CONVERTER_ENABLE_COVERAGE "Enable coverage build" OFF)
 option(MODEL_CONVERTER_ENABLE_LINT "Enable linting using cppcheck" OFF)
 option(MODEL_CONVERTER_ENABLE_LTO "Enable Link Time Optimization when CMAKE_BUILD_TYPE=Release" ON)
@@ -230,9 +231,10 @@ add_executable(${MODEL_CONVERTER_NAMESPACE}::model-converter ALIAS model-convert
 
 install(TARGETS model-converter EXPORT ${MODEL_CONVERTER_PACKAGE_NAME}Config)
 
-if(ML_SDK_BUILD_DOCS)
+if(ML_SDK_BUILD_DOCS OR MODEL_CONVERTER_BUILD_DOCS)
     include(docs/docs.cmake)
 endif()
+unset(MODEL_CONVERTER_BUILD_DOCS CACHE)
 
 # pytest tests depend on vgf_dump
 add_custom_target(model-converter-tests ALL DEPENDS VGF::vgf_dump)
