--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(MODEL_CONVERTER_LOG_TRACE_MASK "" CACHE STRING "Log trace enable mask")
 
 set(MODEL_CONVERTER_PACKAGE_NAME ${PROJECT_NAME})
 set(MODEL_CONVERTER_NAMESPACE ${PROJECT_NAME})
-if(ML_SDK_GENERATE_CPACK)
+if(NOT (CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR) AND ML_SDK_GENERATE_CPACK)
     set(MODEL_CONVERTER_PACKAGE_NAME "ai_ml_sdk_for_vulkan")
 else()
     set(CPACK_PACKAGE_NAME "ai_ml_sdk_model_converter")
