--- a/pip_package/pyproject.toml
+++ b/pip_package/pyproject.toml
@@ -3,5 +3,21 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "ai_ml_sdk_model_converter"
+dynamic = ["version"]
+
+[project.scripts]
+model_converter = "model_converter.cli:main"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+model_converter = ["binaries/**"]
+
+[tool.setuptools_scm]
+fallback_version = "0.0.0"
