Add missing descriptions to pip packages
Change-Id: Ie1937dba5531bde04d0e9b17510f5c01308511a6
Signed-off-by: Mohammadreza Ameri Mahabadian <mohammadreza.amerimahabadian@arm.com>

--- a/pip_package/pyproject.toml
+++ b/pip_package/pyproject.toml
@@ -8,6 +8,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai_ml_sdk_model_converter"
+description = "ML SDK Model Converter"
+readme = "README.md"
 dynamic = ["version"]
 
 [project.scripts]
