--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,5 +1,5 @@
 #
-# SPDX-FileCopyrightText: Copyright 2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
+# SPDX-FileCopyrightText: Copyright 2025-2026 Arm Limited and/or its affiliates <open-source-office@arm.com>
 # SPDX-License-Identifier: Apache-2.0
 #
 version = 1
@@ -27,5 +27,5 @@ SPDX-License-Identifier = "Apache-2.0 WITH LLVM-exception"
 
 [[annotations]]
 path = "test/json/*.json"
-SPDX-FileCopyrightText = "Copyright 2023-2024 Arm Limited and/or its affiliates <open-source-office@arm.com>"
+SPDX-FileCopyrightText = "Copyright 2023-2026 Arm Limited and/or its affiliates <open-source-office@arm.com>"
 SPDX-License-Identifier = "Apache-2.0 WITH LLVM-exception"
