--- a/pip_package/pyproject.toml
+++ b/pip_package/pyproject.toml
@@ -1,5 +1,5 @@
 #
-# SPDX-FileCopyrightText: Copyright 2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
+# SPDX-FileCopyrightText: Copyright 2025-2026 Arm Limited and/or its affiliates <open-source-office@arm.com>
 # SPDX-License-Identifier: Apache-2.0
 #
 [build-system]
@@ -14,6 +14,7 @@ dynamic = ["version"]
 
 [project.scripts]
 model_converter = "model_converter.cli:main"
+model-converter = "model_converter.cli:main"
 
 [tool.setuptools]
 include-package-data = true
